@@ -1,5 +1,10 @@
 2009-07-01  Gordon Williams <gordon.williams@collabora.co.uk>
 
+	Fixes: NB#121519 - A blank frame like windows is shown on the desktop
+	* src/home/hd-render-manager.c: Now only reparent to home if an actor
+	  had a parent previously. If it didn't, it was almost certainly left
+	  over after the MBWMCompMgrClutterClient was destroyed.
+
 	More tweaks for MartinG
 	* data/transitions.ini: Zoom the background less
 	* src/launcher/hd-launcher-grid.c: Zoom out icons on the subview the
